--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -4357,6 +4357,7 @@ input[type="submit"].btn.btn-mini {
   *position: relative;
   *z-index: 2;
   margin-bottom: 20px;
+  margin-top: 10px;
   overflow: visible;
 }
 
