3rd push, full site update

--- a/static/manhunt.css
+++ b/static/manhunt.css
@@ -101,7 +101,8 @@
       margin: 0;
       line-height: 1.25;
       color: #fff;
-      text-shadow: 0 1px 1px rgba(0,0,0,.4);
+      -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: gray;
     }
     .carousel-caption .btn {
       margin-top: 10px;
@@ -142,6 +143,14 @@
 
 
     .about
+    {
+      margin-left: 210px;
+      margin-top: 100px;
+      margin-right: 210px;
+      *zoom: 1;
+    }
+
+    .rules
     {
       margin-left: 210px;
       margin-top: 100px;
